fix: correct overflow property placement in main section of index.scss

--- a/www/src/view/index.scss
+++ b/www/src/view/index.scss
@@ -9,10 +9,10 @@ body {
   grid-template-rows: auto 1fr auto;
 
   main {
-    overflow: hidden;
     position: relative;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 
     display: flex;
     flex-direction: row;
@@ -20,5 +20,13 @@ body {
     align-content: center;
     align-items: center;
     justify-content: center;
+
+    background: no-repeat center center fixed;
+  }
+
+  .right-bottom {
+    position: fixed;
+    right: 0;
+    bottom: 0;
   }
 }
